@@ -2,6 +2,9 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2020-03-27	Richard Forth	Closes #319.
+                                myip.dnsomatic.com Too Many Requests, error
+				suppression.
 2020-03-14	"wiechu"	Updates to the way OS Distribution is detected.
 2020-03-12      "wiechu"	Few cosmetic changes
 2020-03-12      Richard Forth /	Fixed Package management Issue - issue #312
